kube/applications/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: applications
  labels:
    app: prowlarr
  annotations:
    ignore-check.kube-linter.io/latest-tag: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/no-read-only-root-fs: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/run-as-non-root: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-memory-requirements: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-cpu-requirements: >-
      FIXME: fix this one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr:1.31.2.4975-ls108
          ports:
            - name: http
              containerPort: 9696
          startupProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 5
            failureThreshold: 30
            timeoutSeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 2
            timeoutSeconds: 3
            periodSeconds: 30
          resources:
            requests:
              memory: 100Mi
              cpu: 10m
            limits:
              memory: 250Mi
              cpu: 200m
          volumeMounts:
            - name: config
              mountPath: /config
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr
